k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - port: 8000
      targetPort: 8000
